# dependencies-graph

./: AGENTS.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: cli.rs  graph.rs  lib.rs  main.rs  parser.rs  server.rs
src/parser/: cargo.rs  go.rs  mod.rs  npm.rs  poetry.rs
tests/: parser_tests.rs
tests/fixtures/bun/node-modules-fallback/: package.json
tests/fixtures/mixed/cargo-and-npm/: package-lock.json
tests/fixtures/npm/package-lock-hoist/: package-lock.json
tests/fixtures/poetry/basic/: pyproject.toml
web/: app.js  index.html  style.css
